--- a/GUI/app/platform/platform.component.html
+++ b/GUI/app/platform/platform.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-    <div class="row" style="margin: 40px 0px 40px 0px;">                                                                       
+    <div class="row" style="margin: 40px 0px 40px 0px;">
         <img src="assets/images/ESTCube-2-logo.png" alt="" style="float:left;width:60px;height:60px;">
         <h1 style="position:relative;margin-left: 100px;">Data Processing Platform</h1>
     </div>
-    <div class="row">
+    <div class="row" *ngIf="!loader">
         <div class="col-md-4">
             <form [formGroup]="platForm" #form>
                 <fieldset class="form-inline">
@@ -26,6 +26,14 @@
             <button class="btn btn-success" type="button" (click)="upload()">PROCESS</button>
         </div>
     </div>
+    <spinner-component *ngIf="loader">
+    </spinner-component>
+    <div class="row" *ngIf="resultReceived">
+      <p>Script ID: {{result['folder']}}</p>
+    </div>
+    <div class="alert alert-danger" *ngIf="error">
+      <p>{{error}}</p>
+    </div>
     <div class="row">
         <div class="col-md-6" style="padding-right: 20px">
             <div class="row"><h4>Log</h4></div>
@@ -36,7 +44,8 @@
         <div class="col-md-6" style="padding-left: 20px">
             <div class="row"><h4>Plot</h4></div>
             <div class="row" style="min-height:100px;border:1px solid #AAA; background: #dee1e5">
-                <img *ngIf="resultReceived" [attr.src]="imageFromResult()"/>
+                <img *ngIf="resultReceived && imageFromResult()" [attr.src]="imageFromResult()"/>
+                <p *ngIf="resultReceived && !imageFromResult()">No image to show</p>
             </div>
         </div>
     </div>
